--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
                         class="bg-agri-green w-16 h-16 rounded-2xl flex items-center justify-center text-white mb-8 shadow-lg shadow-agri-green/20">
                         <i data-lucide="leaf" class="w-10 h-10"></i>
                     </div>
-                    <h1 class="text-5xl font-bold mb-6 tracking-tight">Agri<span class="text-agri-green">Store</span>
-                    </h1>
-                    <p class="text-xl text-stone-600 dark:text-stone-400 mb-8 leading-relaxed">Your gateway to premium
-                        agricultural solutions. Connect, grow, and succeed with AgriStore.</p>
+                    <h1 class="text-4xl font-bold mb-6 tracking-tight leading-tight">ಪ್ರೀಮಿಯಂ <span
+                            class="text-agri-green">ಉತ್ಪನ್ನಗಳೊಂದಿಗೆ</span> ಸಮೃದ್ಧಿಯನ್ನು ಬೆಳೆಸಿಕೊಳ್ಳಿ</h1>
+                    <p class="text-lg text-stone-600 dark:text-stone-400 mb-8 leading-relaxed">ಉತ್ತಮ ಗುಣಮಟ್ಟದ ಬೀಜಗಳು,
+                        ಗೊಬ್ಬರಗಳು ಮತ್ತು ಉಪಕರಣಗಳನ್ನು ಪಡೆಯಿರಿ. ಆಧುನಿಕ ಕೃಷಿ ಪರಿಹಾರಗಳನ್ನು ನಿಮ್ಮ ಮನೆ ಬಾಗಿಲಿಗೆ ತರುತ್ತೇವೆ.</p>
                     <div class="space-y-4">
                         <div class="flex items-center gap-4">
                             <div
@@ -1861,6 +1861,16 @@
                 </div>
             </div>
         </section>
+    </div>
+
+    <!-- Toast Component -->
+    <div id="toast"
+        class="fixed bottom-8 left-1/2 -translate-x-1/2 z-[2000] hidden transition-all duration-300 translate-y-20">
+        <div
+            class="bg-stone-900 dark:bg-white text-white dark:text-stone-900 px-6 py-4 rounded-2xl shadow-2xl flex items-center gap-3 min-w-[300px]">
+            <i data-lucide="info" class="w-5 h-5 text-agri-green"></i>
+            <p id="toast-msg" class="font-medium"></p>
+        </div>
     </div>
 </body>
 
