Finalize Login Gate localization to Kannada

--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
                             class="w-full bg-agri-green text-white font-bold py-5 rounded-2xl transition-all shadow-lg shadow-agri-green/20 hover:scale-[1.02]">Sign
                             In</button>
                     </div>
-                    <p class="text-center text-sm text-stone-500">New here? <a href="javascript:void(0)"
-                            onclick="switchGateView('signup')" class="text-agri-green font-bold hover:underline">Create
-                            an Account</a></p>
+                    <p class="text-center text-sm text-stone-500">ಹೊಸಬರೇ? <a href="javascript:void(0)"
+                            onclick="switchGateView('signup')"
+                            class="text-agri-green font-bold hover:underline">ಖಾತೆಯನ್ನು ರಚಿಸಿ</a></p>
                 </div>
 
                 <div id="gate-signup-view" class="hidden space-y-6">
@@ -162,9 +162,9 @@
                             class="w-full bg-agri-green text-white font-bold py-5 rounded-2xl transition-all shadow-lg shadow-agri-green/20 hover:scale-[1.02]">Create
                             Free Account</button>
                     </div>
-                    <p class="text-center text-sm text-stone-500">Already have an account? <a href="javascript:void(0)"
-                            onclick="switchGateView('login')" class="text-agri-green font-bold hover:underline">Log
-                            In</a></p>
+                    <p class="text-center text-sm text-stone-500">ಈಗಾಗಲೇ ಖಾತೆ ಹೊಂದಿದ್ದೀರಾ? <a href="javascript:void(0)"
+                            onclick="switchGateView('login')" class="text-agri-green font-bold hover:underline">ಲಾಗ್
+                            ಇನ್</a></p>
                 </div>
             </div>
         </div>
